Host/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
20:22:29 **** Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:22:36 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
make: Nothing to be done for 'all'.
20:22:58 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:23:42 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:23:52 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:24:04 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
make: Nothing to be done for 'all'.
20:24:13 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:24:29 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:26:37 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
../main.c: In function ‘main’:
../main.c:22:9: error: expected declaration or statement at end of input
   22 |         }
      |         ^
make: *** [subdir.mk:20: main.o] Error 1
"make all" terminated with exit code 2. Build might be incomplete.
20:27:19 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:27:51 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
20:29:03 **** Incremental Build of configuration Debug for project 01_if_statement ****
make all 
Building file: ../main.c
Invoking: GCC C Compiler
gcc -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"main.d" -MT"main.o" -o "main.o" "../main.c"
Finished building: ../main.c
 
Building target: 01_if_statement
Invoking: GCC C Linker
gcc  -o "01_if_statement" ./main.o   
Finished building target: 01_if_statement
 
